Bug 413680 - filter rules deleted whenever they are saved, because move means move, r+sr=neil, a=NPOYLW